# buchklub-web

./: .env  README.md  docker-compose.override.yaml  docker-compose.yaml  package-lock.json
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yaml  environment.env  main.py  models.py  pyproject.toml
backend/migrations/: env.py
backend/scripts/: prestart.sh  start.sh  start_reload.sh
backend/src/api/: __init__.py  backend_pre_start.py  database.py  main.py  models.py  settings.ini  settings.py
backend/src/api/auth/: auth_bearer.py  auth_handler.py  password.py
backend/src/api/book/: crud.py  model.py  view.py
backend/src/api/rating/: compute_stats.py  crud.py  genre_stats.py  model.py  old_compute_stats.py  user_stats.py  view.py
backend/src/api/user/: crud.py  model.py  view.py
frontend/: .env.example  README.md  index.html  nginx-backend-not-found.conf  package-lock.json  package.json  tsconfig.app.json
frontend/app/: globals.css
frontend/buchklub/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AddBook.tsx  NavBar.tsx  RateBook.tsx  RatingSelection.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/wrapper/: AdvButton.tsx
frontend/src/lib/: axios.ts
frontend/src/modules/auth/: README.md
frontend/src/modules/auth/api/: index.ts
frontend/src/modules/auth/components/: AuthContext.tsx  (+2 more)
frontend/src/modules/book/: README.md
frontend/src/modules/shelf/: README.md
frontend/src/pages/: Home.tsx  Library.tsx  PagePaths.ts  Shelf.tsx  Statistics.tsx  UserPage.tsx
(+36 files in other folders)
